[package]
name = "sspa_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
polling = "2.8.0"
ringbuf = "0.3.3"
tokio = { version = "1.29.1", features = ["full"] }
tui = "0.19.0"
